# AutoSKL

./: .env  .gitignore  Dockerfile  README.md  config.yaml  docker-compose.yml  dump.rdb  ml_framework.db  prompt.txt  pyproject.toml  requirements.txt  run.py
.codesandbox/: tasks.json
app/: main.py
catboost_info/: catboost_training.json  learn_error.tsv  time_left.tsv
evaluations/: evaluation_20241118_034256.joblib  evaluation_20241118_034948.joblib  evaluation_20241118_035816.joblib  evaluation_20241118_041433.joblib  evaluation_20241118_041840.joblib  evaluation_20241118_044127.joblib  evaluation_20241118_044425.joblib  evaluation_20241118_045455.joblib  evaluation_20241118_050215.joblib  evaluation_20241118_050920.joblib  evaluation_20241118_064509.joblib  evaluation_20241118_065233.joblib  evaluation_20241118_065831.joblib  evaluation_20241118_070803.joblib  evaluation_20241118_090105.joblib  evaluation_20241118_091023.joblib  evaluation_20241118_091957.joblib  evaluation_20241118_121009.joblib  evaluation_20241118_121816.joblib  evaluation_20241118_122440.joblib  evaluation_20241118_123904.joblib  evaluation_20241118_132356.joblib  evaluation_20241118_134051.joblib  evaluation_20241118_134653.joblib  evaluation_20241118_135249.joblib  evaluation_20241118_150047.joblib  evaluation_20241118_154257.joblib  evaluation_20241118_154543.joblib  evaluation_20241118_154836.joblib  evaluation_20241118_155456.joblib
logs/: app_daily.log.2024-11-15  app_daily.log.2024-11-16
models/: regression_20241115_004738.joblib  regression_20241115_004738_metadata.joblib  (+2 more)
(+69 files in other folders)
